--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon"><img src="ASLogo.jpg" alt="Alex Simpson Logo"></span>
+						<div class="Logo">
+							<span class="Logo"><img src="/images/ASLogo.jpg" alt="Alex Simpson Logo"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
