--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="Logo">
-							<span class="icon fa-gem"></span>
+						<div class="icon">
+							<sppan class="icon fa-gem"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
