--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Alex Simpson</h1>
-								<p>Get to know me, my work and my passion all right here! Amatuer coder and web developer for hire on a part time basis!</p>
+								<p>Get to know me, my work and my passion all right here! Amateur coder and web developer for hire on a part time basis!</p>
 							</div>
 						</div>
 						<nav>
