--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Alex Simpson</h1>
-								<p>Get to know me, my work and my passion all right here! Amateur coder and web developer for hire on a part time basis!</p>
+								<p>Get to know me, my work and my passion all right here! Student coder and web developer for hire on a part time basis!</p>
 							</div>
 						</div>
 						<nav>
@@ -342,7 +342,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Alex Simpson. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
