--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/A_SimpsonDev" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200/" class="icon brands fa-linkedin-f"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/iamalexsimpson" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
