--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
+								<p>I am Alex Simpson (as you've probably figured out). I'm a 24 year old University Student studying Computer Games Development at Staffordshire. I've grown up in Gloucestershire, where the the views are supposedly idyllic but I've never agreed with that. I have always had an interest in IT and modern technology, ever since I owned my Gameboy Pocket back in 2000. My console collection has included various models from other Nintendo handhelds, Sony and Xbox's home consoles and currently a gaming PC. I've crafted several projects from conception, yet never had all the skills required to complete them from start to end. You can check out some of my work by <a href="#work">clicking here</a>.</p>
+								<p>During my studies at Gloucestershire College, I used Unreal Engine 4 and Blender to create a simple 3D game. However, I find it most comfortable to work with 2D pixel art as I find this style easy to manipulate and also find it nostalgic to create modern games using old techniques. Games that have inspired my creativity include the early Pokemon RPG's, Minecraft and Rivals of Aether. However, I do play a variety of games nowadays these ones have helped me to understand pixel art and animation.</p>
 							</article>
 
 						<!-- Work -->
