--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Alex Simpson Portfolio</title>
-		<link rel="shortcut icon" href="iamalexsimspon.github.io/favicon.ico" />
+		<link rel='icon' href='favicon.ico' type='image/x-icon'/ >
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
