--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<p>This is an opportunity for me to show off projects I have worked on and others that I am currently still creating. Most of these projects will be from Assignments I received throughout College but I have also included some passion projects that I have been working on in my free time.</p>
-								<span class="image main"><img src="images/Heroes.JPG" alt="" /></span>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<span class="image main"><img src="images/Heroes.JPG" alt="My Custom Miniatures using HeroForge" /></span>
+								<p>Above is an image captured on <a href=heroforge.com>HeroForge</a>. </p>
 							</article>
 
 						<!-- Socials -->
