--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<h2 class="major">Work</h2>
 								<p>This is an opportunity for me to show off projects I have worked on and others that I am currently still creating. Most of these projects will be from Assignments I received throughout College but I have also included some passion projects that I have been working on in my free time.</p>
 								<span class="image main"><img src="images/Heroes.JPG" alt="My Custom Miniatures using HeroForge" /></span>
-								<p>Above is an image captured on <a href="heroforge.com">HeroForge</a>. </p>
+								<p>Above is an image captured on <a href="https://heroforge.com">HeroForge</a>. </p>
 							</article>
 
 						<!-- Socials -->
