--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<h2 class="major">Work</h2>
 								<p>This is an opportunity for me to show off projects I have worked on and others that I am currently still creating. Most of these projects will be from Assignments I received throughout College but I have also included some passion projects that I have been working on in my free time.</p>
 								<span class="image main"><img src="images/Heroes.JPG" alt="My Custom Miniatures using HeroForge" /></span>
-								<p>Above is an image captured on <a href="https://www.heroforge.com" target="_blank">HeroForge</a>. </p>
+								<p>Above is an image captured on <a href="https://www.heroforge.com" target="_blank">HeroForge.com</a>. Using this website I have created more than a dozen unique characters, however I do not intend to use them to play tabletop games like Dungeons & Dragons but instead as character concepts for a Console Exclusive M.O.B.A I am currently wokring on. I have also created a backstory (lore) for the creation of my universe and how each of the Solar Systems differ from each other in relation to how they generate, store and manipulate the energy that flows through the universe.</p>
 							</article>
 
 						<!-- Socials -->
