--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Alex Simpson Portfolio</title>
-		<link rel="icon" href="iamalexsimpson.github.io/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="iamalexsimpson.github.io/favicon.ico" type="" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -76,7 +76,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="/action_page.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
