--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 						<!-- Socials -->
 							<article id="socials">
 								<h2 class="major">Socials</h2>
-								<a class="twitter-timeline" href="https://twitter.com/A_SimpsonDev?ref_src=twsrc%5Etfw">Tweets by A_SimpsonDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-								<p></p>
+									<a class="twitter-timeline" data-width="666" data-height="999" href="https://twitter.com/A_SimpsonDev?ref_src=twsrc%5Etfw">Tweets by A_SimpsonDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>								<p></p>
 							</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/A_SimpsonDev" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
