--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 						<!-- Socials -->
 							<article id="socials">
 								<h2 class="major">Socials</h2>
-									<a class="twitter-timeline" data-width="777" data-height="1337" href="https://twitter.com/A_SimpsonDev?ref_src=twsrc%5Etfw">Tweets by A_SimpsonDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>								<p></p>
-							</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/A_SimpsonDev" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/iamalexsimpson" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
+									<a class="twitter-timeline" data-width="777" data-height="1337" href="https://twitter.com/A_SimpsonDev?ref_src=twsrc%5Etfw">Tweets by A_SimpsonDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+									<p></p>
 							</article>
 
 						<!-- Contact -->
