--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
@@ -25,7 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Alex Simpson</h1>
+								<h1>Alex Simpso</h1>
 								<p>Get to know me, my work and my passion all right here! Student coder and web developer for hire on a part time basis!</p>
 							</div>
 						</div>
