--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Alex Simpso</h1>
-								<p>Get to know me, my work and my passion all right here! Student coder and web developer for hire on a part time basis!</p>
+								<h1>Alex Simpson</h1>
+								<p>Graphic & Web Designer<br class="mobile-hide">
+								Based in Cheltenham, UK</p>
 							</div>
 						</div>
 						<nav>
