--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Alex Simpson Portfolio</title>
-		<link rel="icon" href="iamalexsimpson.github.io/favicon.ico" type="" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
+<head>
+	<title>Alex Simpson Portfolio</title>
+	<link rel="icon" href="iamalexsimpson.github.io/favicon.ico" type="" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<script src="https://kit.fontawesome.com/191eef2caa.js" crossorigin="anonymous"></script>
+</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -21,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="fas fa-cookie-bite"></span>
+							<i class="fa-solid fa-star"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
