--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-pen-to-square"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
