--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<div class="inner">
 								<h1>Alex Simpson</h1>
 								<p>Graphic & Web Designer<br class="mobile-hide">
-								Based in Cheltenham, UK</p>
+								Based in South West, UK</p>
 							</div>
 						</div>
 						<nav>
@@ -49,8 +49,10 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
-								<p>I am Alex Simpson (as you've probably figured out). I'm a 25 year old University Student studying Computer Games Development at Staffordshire. I've grown up in Gloucestershire, where the the views are supposedly idyllic but I've never agreed with that. I have always had an interest in IT and modern technology, ever since I owned my Gameboy Pocket back in 2000. My console collection has included various models from other Nintendo handhelds, Sony and Xbox's home consoles and currently a gaming PC. I've crafted several projects from conception, yet never had all the skills required to complete them from start to end. You can check out some of my work by <a href="#work">clicking here</a>.</p>
-								<p>During my studies at Gloucestershire College, I used Unreal Engine 4 and Blender to create a simple 3D game. However, I find it most comfortable to work with 2D pixel art as I find this style easy to manipulate and also find it nostalgic to create modern games using old techniques. Games that have inspired my creativity include the early <a href="https://www.pokemon.com/uk/" target="_blank">Pokemon RPG's</a>, <a href="https://www.minecraft.net" target="_blank">Minecraft</a> and <a href="https://rivalsofaether.com/" target="_blank">Rivals of Aether</a>. I do play a variety of games nowadays such as <a href="https://www.arenaofvalor.com/" target="_blank">Arena of Valor</a>, <a href="https://paladinstudios.com/stormbound/" target="_blank">Stormbound</a> and <a href="https://www.seaofthieves.com/" target="_blank">Sea of Thieves</a>, however those earlier mentioned titles have helped me to understand pixel art and animation.</p>
+								<p>Name: Alex Simpson<br class="mobile-hide">
+								   Pronouns: He/Him<br class="mobile-hide">
+								   Age: 29
+								   Location: South West, UK</p>
 							</article>
 
 						<!-- Work -->
