--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
 								<p>Name: Alex Simpson<br class="mobile-hide">
 								   Pronouns: He/Him<br class="mobile-hide">
-								   Age: 29
+								   Age: 29<br class="mobile-hide">
 								   Location: South West, UK</p>
 							</article>
 
