--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
 	<title>Alex Simpson Portfolio</title>
-	<link rel="icon" href="iamalexsimpson.github.io/favicon.ico" type="" />
+	<link rel="icon" href="images/tabicon.png" type="image/x-icon">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,22 +22,22 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<i class="fa-solid fa-pen-to-square"></i>
+							<i class="fa-solid fa-user-astronaut"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Alex Simpson</h1>
 								<p>Graphic & Web Designer<br class="mobile-hide">
-								Based in South West, UK</p>
+                                   Based in South West, UK</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">About</a></li>
+								<li><a href="#bio">Bio</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#socials">Socials</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<li><a href="#elements">Elements</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -45,36 +45,75 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
-								<p>Name: Alex Simpson<br class="mobile-hide">
-								   Pronouns: He/Him<br class="mobile-hide">
-								   Age: 29<br class="mobile-hide">
-								   Location: South West, UK</p>
-							</article>
+						<!-- Bio -->
+						<article id="bio">
+							<h2 style="text-align: center;">Bio</h2>
+							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
+							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3>
+								Name: Alex Simpson<br class="mobile-hide">
+								Age: 29<br class="mobile-hide">
+								Pronouns: He/Him<br class="mobile-hide">
+								Location: South West, UK
+							</h3>
+							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3 style="text-align: right;">
+								I've lived in Gloucestershire all my life, studying <em>Interactive Games Design & Development</em> at Gloucestershire College.
+							</h3>
+							<h3 style="text-align: right;">
+								Following that, I developed these skills further at Staffordshire University, spending 3 years learning <em>Games Development</em>.
+							</h3>
+							<h3 style="text-align: right;">
+								Now, I use what tools I have available to produce a variety of multimedia. This includes Icons, Logos, Infographics, Digital Content, Websites etc.
+							</h3>
+							<h3 style="text-align: center;">
+								You can get hold of me through any of my socials or via email: <a><em>iamalexsimpson@outlook.com</em></a>
+							</h3>
+							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<table>
+									<tr>
+										<td style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=61577181376048" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook">&nbsp;</i>Facebook</a><br /></td>
+										<td style="text-align: center;"><a href="https://bsky.app/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-bluesky">&nbsp;</i>BlueSky</a><br /></td>
+										<td style="text-align: center;"><a href="https://www.linkedin.com/in/alex-simpson-54b64a200" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin">&nbsp;</i>LinkedIn</a><br /></td>
+									</tr>
+							</table>
+							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+						</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<p>This is an opportunity for me to show off projects I have worked on and others that I am currently still creating. Most of these projects will be from Assignments I received throughout College but I have also included some passion projects that I have been working on in my free time.</p>
-								<span class="image main"><img src="images/Heroes.JPG" alt="My Custom Miniatures using HeroForge" /></span>
-								<p>Above is an image captured on <a href="https://www.heroforge.com" target="_blank">HeroForge.com</a>. Using this website I have created more than a dozen unique characters, however I do not intend to use them to play tabletop games like Dungeons & Dragons but instead as character concepts for a Console Exclusive M.O.B.A I am currently wokring on. I have also created a backstory (lore) for the creation of my universe and how each of the Solar Systems differ from each other in relation to how they generate, store and manipulate the energy that flows through the universe.</p>
-								<span class="image main"><img src="images/Map v1.21.png" alt="" /></span>
-								<p></p>
-							</article>
+						<article id="work">
+							<h2 style="text-align: center;">Work</h2>
+							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3 style="text-align: center;">Website(s)</h3>
+							<span class="image main"><img src="images/dapavinghomesnip.JPG" alt="" /></span>
+							<span class="image main"><img src="images/dapavingreviewssnip.JPG" alt="" /></span>
+							<span class="image main"><img src="images/dapavingteamsnip.JPG" alt="" /></span>
+							<span class="image main"><img src="images/DnAFBBanner.png" alt="" /></span>
+							<h3 style="text-align: center;">Logo(s)</h3>
+							<span class="image main"><img src="images/logos.png" alt="" /></span>
+							<h3 style="text-align: center;">Miscellaneous</h3>
+							<span class="image main"><img src="images/orioninside.png" alt="" /></span>
+							<span class="image main"><img src="images/mobamap.png" alt="" /></span>
+							<span class="image main"><img src="images/BlitzStats.JPG" alt="" /></span>
+							<span class="image main"><img src="images/pokebanner.png" alt="" /></span>
+							<span class="image main"><img src="images/PokemonCompare.png" alt="" /></span>
+							<span class="image main"><img src="images/skylaralbum.png" alt="" /></span>
+							<span class="image main"><img src="images/southarcadepolaroid.png" alt="" /></span>
+							<span class="image main"><img src="images/MenuFront.JPG" alt="" /></span>
+							<span class="image main"><img src="images/MenuP1.JPG" alt="" /></span>
+							<span class="image main"><img src="images/PhonePaper.png" alt="" /></span>
+
+						</article>
 
 						<!-- Socials -->
 							<article id="socials">
 								<h2 class="major">Socials</h2>
 								<ul class="icons">
 									<li><a href="https://twitter.com/A_SimpsonDev" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/iamalexsimpson" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-									<a class="twitter-timeline" data-width="777" data-height="999" href="https://twitter.com/A_SimpsonDev?ref_src=twsrc%5Etfw">Tweets by A_SimpsonDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-									<p></p>
+								</ul>															
 							</article>
 
 						<!-- Contact -->
@@ -99,6 +138,7 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
+									</form>
 							</article>
 
 						<!-- Elements -->
@@ -185,7 +225,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												<tr>
 													<th>Name</th>
 													<th>Description</th>
-													<th>Price</th>
+													
 												</tr>
 											</thead>
 											<tbody>
