--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 						<!-- Bio -->
 						<article id="bio">
 							<h2 style="text-align: center;">Bio</h2>
-							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3 style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></h3>
 							<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
-							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3 style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></h3>
 							<h3>
 								Name: Alex Simpson<br class="mobile-hide">
 								Age: 29<br class="mobile-hide">
 								Pronouns: He/Him<br class="mobile-hide">
 								Location: South West, UK
 							</h3>
-							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3 style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></h3>
 							<h3 style="text-align: right;">
 								I've lived in Gloucestershire all my life, studying <em>Interactive Games Design & Development</em> at Gloucestershire College.
 							</h3>
@@ -68,23 +68,20 @@
 								Now, I use what tools I have available to produce a variety of multimedia. This includes Icons, Logos, Infographics, Digital Content, Websites etc.
 							</h3>
 							<h3 style="text-align: center;">
-								You can get hold of me through any of my socials or via email: <a><em>iamalexsimpson@outlook.com</em></a>
+								You can get hold of me through any of my socials or via email: <p style="text-transform: lowercase;"><a><em>iamalexsimpson@outlook.com</em></a></p>
 							</h3>
-							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
-							<table>
-									<tr>
-										<td style="text-align: center;"><a href="https://www.facebook.com/profile.php?id=61577181376048" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook">&nbsp;</i>Facebook</a><br /></td>
-										<td style="text-align: center;"><a href="https://bsky.app/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-bluesky">&nbsp;</i>BlueSky</a><br /></td>
-										<td style="text-align: center;"><a href="https://www.linkedin.com/in/alex-simpson-54b64a200" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin">&nbsp;</i>LinkedIn</a><br /></td>
-									</tr>
-							</table>
-							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3 style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></h3>
+							<ul class="icons" style="text-align: center;">
+								<li><a href="https://www.facebook.com/profile.php?id=61577181376048" target="_blank" rel="noopener noreferrer" class="fa-brands fa-square-facebook"><span class="label"></span></a></li>
+								<li><a href="https://bsky.app/profile/simpsonsdesigns.bsky.social" target="_blank" rel="noopener noreferrer" class="fa-brands fa-bluesky"><span class="label"></span></a></li>
+								<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200" target="_blank" rel="noopener noreferrer" class="fa-brands fa-linkedin"><span class="label"></span></a></li>
+							</ul>
 						</article>
 
 						<!-- Work -->
 						<article id="work">
 							<h2 style="text-align: center;">Work</h2>
-							<p style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></p>
+							<h3 style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></h3>
 							<h3 style="text-align: center;">Website(s)</h3>
 							<span class="image main"><img src="images/dapavinghomesnip.JPG" alt="" /></span>
 							<span class="image main"><img src="images/dapavingreviewssnip.JPG" alt="" /></span>
@@ -107,39 +104,53 @@
 						</article>
 
 						<!-- Socials -->
-							<article id="socials">
-								<h2 class="major">Socials</h2>
-								<ul class="icons">
-									<li><a href="https://twitter.com/A_SimpsonDev" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/iamalexsimpson" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>															
-							</article>
+						<article id="socials">
+							<h2 style="text-align: center;">Socials</h2>
+							<h3 style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></h3>
+							<ul class="icons" style="text-align: center;">
+								<li><a href="https://www.facebook.com/profile.php?id=61577181376048" target="_blank" rel="noopener noreferrer" class="fa-brands fa-square-facebook"><span class="label"></span></a></li>
+								<li><a href="https://bsky.app/profile/simpsonsdesigns.bsky.social" target="_blank" rel="noopener noreferrer" class="fa-brands fa-bluesky"><span class="label"></span></a></li>
+								<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200" target="_blank" rel="noopener noreferrer" class="fa-brands fa-linkedin"><span class="label"></span></a></li>
+							</ul>
+							<ul class="icons" style="text-align: center;">
+								<li><a href="https://www.twitch.tv/norvillettv" target="_blank" rel="noopener noreferrer" class="fa-brands fa-twitch"><span class="label"></span></a></li>
+								<li><a href="https://www.letterboxd.com/norvi11erogers" target="_blank" rel="noopener noreferrer" class="fa-brands fa-letterboxd"><span class="label"></span></a></li>
+							</ul>
+						</article>
 
 						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="/action_page.php">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
+						<article id="contact">
+							<h2 style="text-align: center;">Contact</h2>
+							<h3 style="text-align: center;"><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i><i class="fa-solid fa-code-commit"></i></h3>
+							<h4 style="text-align: center;"><i class="fa-solid fa-wrench"></i>&nbsp;Under Construction&nbsp;<i class="fa-solid fa-wrench"></i></h4>
+							<h4 style="text-align: center;">Please do not use this form!</h4>
+							<h4 style="text-align: center;">If you wish to contact me, please do so using one of my socials below:</h4>
+							<ul class="icons" style="text-align: center;">
+								<li><a href="https://www.facebook.com/profile.php?id=61577181376048" target="_blank" rel="noopener noreferrer" class="fa-brands fa-square-facebook"><span class="label"></span></a></li>
+								<li><a href="https://bsky.app/profile/simpsonsdesigns.bsky.social" target="_blank" rel="noopener noreferrer" class="fa-brands fa-bluesky"><span class="label"></span></a></li>
+								<li><a href="https://www.linkedin.com/in/alex-simpson-54b64a200" target="_blank" rel="noopener noreferrer" class="fa-brands fa-linkedin"><span class="label"></span></a></li>
+							</ul>
+							<form method="post" action="/action_page.php">
+								<div class="fields">
+									<div class="field half">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-									</form>
-							</article>
+									<div class="field half">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="4"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" class="primary" /></li>
+									<li><input type="reset" value="Reset" /></li>
+								</ul>
+							</form>
+						</article>
 
 						<!-- Elements -->
 							<article id="elements">
@@ -198,7 +209,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<li>Felis enim et feugiat.</li>
 									</ol>
 									<h4>Icons</h4>
-									<ul class="icons">
+									<ul class="icons" style="text-align: justify;">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
