--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 							</div>
 						</div>
 						<nav>
-							<ul>
-								<li><a href="#bio">Bio</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#socials">Socials</a></li>
-								<li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Elements</a></li>
-							</ul>
+                            <ul>
+                                <li><a href="#bio">Bio</a></li>
+                                <li><a href="#work">Work</a></li>
+                                <li><a href="#socials">Socials</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                                <!--<li><a href="#elements">Elements</a></li>-->
+                            </ul>
 						</nav>
 					</header>
 
